--- a/README.Rmd
+++ b/README.Rmd
@@ -184,9 +184,9 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-![Items and constructs](/D3mirt/images/anes1.png)Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
+![Items and constructs](anes1.png)Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./images/anes2.png" alt="Items and constructs"/>Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
+![Items and constructs](anes2.png)Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -204,9 +204,9 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-<img src="./item1.png" alt="Item W7Q16"/>Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
+![Item W7Q16](item1.png)Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./item2.png" alt="Item W7Q16"/>Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
+![Item W7Q16](item2.png)Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -253,9 +253,9 @@ plot(g, hide = TRUE,
      z.lab="Fairness")
 ```
 
-<img src="./p1.png" alt="Gender profile"/>Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
+![Gender profile](p1.png)Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./p2.png" alt="Gender profile"/>Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
+![Gender profile](p2.png)Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -300,9 +300,9 @@ plot(g, hide = TRUE,
      ellipse.col = "orange")
 ```
 
-<img src="./ci1.png" alt="95% CI"/>Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
+![95% CI](ci1.png)Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./ci2.png" alt="95% CI"/>Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
+![95% CI](ci2.png)Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
