--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -197,8 +197,7 @@ If the default mode `efa = TRUE` is not changed, the function first does a EFA w
 In this example, however, the factor loadings are already available in the package file "efa.Rdata" and so the function call will only identify the model.
 
 ```{r, include = FALSE}
-library(D3mirt)
-load(system.file("efa.Rdata", package = "D3mirt"))
+load("efa.Rdata")
 ```
 
 ```{r, eval = FALSE}
@@ -367,8 +366,7 @@ The `summary()` function, included in the package, is used to inspect the DMIRT 
 In this example, the S4 object `mod.1` from the mirt estimation above is used directly in the call to `D3mirt()`.
 
 ```{r, include = FALSE}
-library(D3mirt)
-load(system.file("mod.1.Rdata", package = "D3mirt"))
+load("mod.1.Rdata")
 ```
 
 ```{r, eval = FALSE}
@@ -556,8 +554,7 @@ f <- mirt::fscores(mod.1,
 ```
 
 ```{r, include = FALSE}
-library(D3mirt)
-load(system.file("fscores.Rdata", package = "D3mirt"))
+load("fscores.Rdata")
 ```
 
 ```{r, eval = FALSE}
