--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -350,7 +350,7 @@ spec <-  ' F1 = 1-20
 
            FIXED=(W7Q20,a3) '
 
-mod.1 <- mirt::mirt(x, 
+mod1 <- mirt::mirt(x, 
                    spec, 
                    itemtype = 'graded', 
                    SE = TRUE, 
@@ -363,20 +363,20 @@ The `D3mirt()` function prints a short report containing the number of items use
 If construct vectors are used, the function will also print the number of construct vectors and the names of the items included in each construct (for an example see below).
 
 The `summary()` function, included in the package, is used to inspect the DMIRT estimates.
-In this example, the S4 object `mod.1` from the mirt estimation above is used directly in the call to `D3mirt()`.
+In this example, the S4 object `mod1` from the mirt estimation above is used directly in the call to `D3mirt()`.
 
 ```{r, include = FALSE}
-load("mod.Rdata")
+load("mod1.Rdata")
 ```
 
 ```{r, eval = FALSE}
-# Optional: Load the mod.1 data for this example directly from the package file
-load(system.file("mod.Rdata", package = "D3mirt"))
+# Optional: Load the mod1 data for this example directly from the package file
+load(system.file("mod1.Rdata", package = "D3mirt"))
 ```
 
 ```{r}
 # Call D3mirt()
-g <- D3mirt(mod.1)
+g <- D3mirt(mod1)
 summary(g) # Show summary of results
 ```
 
@@ -401,7 +401,7 @@ The constructs included below were grouped based on exploratory reasons, i.e., b
 c <- list(list(1,2,3,4,5,6,7,8,9,10),
           list(11,12,13,14),
           list(15,17,18,19,20))
-g <- D3mirt(mod.1, c)
+g <- D3mirt(mod1, c)
 summary(g)
 ```
 
@@ -547,7 +547,7 @@ To save some time in running the examples, the `fscores()` output is stored in t
 
 ```{r, eval = FALSE}
 # Extract respondent factor scores from mod1 with fscores() function
-f <- mirt::fscores(mod.1, 
+f <- mirt::fscores(mod1, 
                    method="EAP", 
                    full.scores = TRUE, 
                    full.scores.SE = FALSE, QMC = TRUE)
