--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -200,12 +200,10 @@ In this example, however, the factor loadings are already available in the packa
 load("efa.Rdata")
 ```
 
-```{r, eval = FALSE}
-# Optional: Load the EFA data for this example directly from the package file
-load(system.file("efa.Rdata", package = "D3mirt"))
-```
-
 ```{r}
+# Optional: Load the EFA data for this example directly from the package file
+# load(system.file("efa.Rdata", package = "D3mirt"))
+
 # Call to modid()
 a <- modid(x, efa = FALSE)
 summary(a)
@@ -369,12 +367,10 @@ In this example, the S4 object `mod1` from the mirt estimation above is used dir
 load("mod1.Rdata")
 ```
 
-```{r, eval = FALSE}
-# Optional: Load the mod1 data for this example directly from the package file
-load(system.file("mod1.Rdata", package = "D3mirt"))
-```
-
 ```{r}
+# Optional: Load the mod1 data for this example directly from the package file
+# load(system.file("mod1.Rdata", package = "D3mirt"))
+
 # Call D3mirt()
 g <- D3mirt(mod1)
 summary(g) # Show summary of results
@@ -557,12 +553,10 @@ f <- mirt::fscores(mod1,
 load("fscores.Rdata")
 ```
 
-```{r, eval = FALSE}
-# Optional: Load the respondent factor scores for this example directly from the package file
-load(system.file("fscores.Rdata", package = "D3mirt"))
-```
-
 ```{r}
+# Optional: Load the respondent factor scores for this example directly from the package file
+# load(system.file("fscores.Rdata", package = "D3mirt"))
+
 # Attach f to the gender variable (column 2 from anes0809offwaves data set; "W3XGENDER")
 # Use cbind with fscores() output attached first
 data("anes0809offwaves")
