--- a/README.Rmd
+++ b/README.Rmd
@@ -96,7 +96,7 @@ The absolute sum scores indicate statistical fit to the structural assumptions o
 
 ```{r}
 # Optional: Load the EFA data for this example directly from the package file
-load(system.file("efa.Rdata", package = "D3mirt"))
+load(system.file("extdata/efa.Rdata", package = "D3mirt"))
 
 # Call to modid() with h, containing factors scores from EFA
 # Observe that the efa argument is set to false 
@@ -158,7 +158,7 @@ When creating this document, extracted model parameters from the S4 object `mod1
 
 ```{r}
 # Optional: Load the mod1 data as data frame directly from the package file
-load(system.file("mod1.Rdata", package = "D3mirt"))
+load(system.file("extdata/mod1.Rdata", package = "D3mirt"))
 
 # Call to D3mirt(), including optional nested lists for three constructs
 # Item W7Q16 is not included in any construct because of model violations
@@ -228,7 +228,7 @@ f <- mirt::fscores(mod1,
 
 ```{r}
 # Optional: Load the respondent factor scores for this example directly from the package file
-load(system.file("fscores.Rdata", package = "D3mirt"))
+load(system.file("extdata/fscores.Rdata", package = "D3mirt"))
 
 # Attach f to the gender variable (column 2 from anes0809offwaves data set; "W3XGENDER")
 # Use cbind with fscores() output attached first
