--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -201,7 +201,7 @@ load("efa.Rdata")
 ```
 ```{r, eval = FALSE}
 # Optional: Load the EFA data for this example directly from the package file
-load(system.file("efa.Rdata", package = "D3mirt"))
+load(system.file("extdata/efa.Rdata", package = "D3mirt"))
 ```
 ```{r}
 # Call to modid()
@@ -361,15 +361,14 @@ The `D3mirt()` function prints a short report containing the number of items use
 If construct vectors are used, the function will also print the number of construct vectors and the names of the items included in each construct (for an example see below).
 
 The `summary()` function, included in the package, is used to inspect the DMIRT estimates.
-In this example, the S4 object `mod1` from the mirt estimation above is used directly in the call to `D3mirt()`.
+When creating this document, extracted model parameters from the S4 object `mod1`, estimated in the previous step, were assigned to a data frame with the same name and is used in the call to `D3mirt()`. Note, however, it is also possible to use `mod1` as an S4 object directly in the call to `D3mirt()`.
 
 ```{r, include = FALSE}
 load("mod1.Rdata")
-mod1 <- data.frame(mirt::coef(mod1, simplify=TRUE)$'items'[,1:8])
 ```
 ```{r, eval = FALSE}
-# Optional: Load the mod1 data for this example directly from the package file
-load(system.file("mod1.Rdata", package = "D3mirt"))
+# Optional: Load the mod1 as a data frame directly from the package file
+load(system.file("extdata/mod1.Rdata", package = "D3mirt"))
 ```
 ```{r}
 # Call D3mirt()
@@ -555,7 +554,7 @@ load("fscores.Rdata")
 ```
 ```{r, eval = FALSE}
 # Optional: Load the respondent factor scores for this example directly from the package file
-load(system.file("fscores.Rdata", package = "D3mirt"))
+load(system.file("extdata/fscores.Rdata", package = "D3mirt"))
 ```
 ```{r}
 # Attach f to the gender variable (column 2 from anes0809offwaves data set; "W3XGENDER")
