--- a/README.Rmd
+++ b/README.Rmd
@@ -153,7 +153,7 @@ Constructs can be included in the analysis by creating one or more nested lists 
 
 The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) showing how all items discriminate locally in the direction of the construct vector with the help of the $DDISC$ index.
 
-When creating this document, extracted model parameters from the S4 object `mod1`, estimated in the previous step, were assigned to a data frame with the same name and stored as file in the package. This file is loaded and used in the call to `D3mirt()` below. Note, however, it is also possible to use the S4 object from `mirt()` directly in the call to `D3mirt()`. The `summary()` function, included in the package, is used to inspect the DMIRT estimates. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (observable in the graphical output below).
+When calling `D3mirt()` it is possible to use the S4 object from `mirt()` directly in the call to `D3mirt()` or a data frame containing model parameters from the compensatory model. The `summary()` function, included in the package, is used to inspect the DMIRT estimates. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (observable in the graphical output below).
 
 ```{r}
 # Optional: Load the mod1 data as data frame directly from the package file
@@ -183,14 +183,9 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-![Items and constructs](../images/anes1.png)
-![Items and constructs](/images/anes1.png)
-![Items and constructs](./images/anes1.png)
-![this screenshot](https://github.com/ForsbergPyschometrics/D3mirt/images/anes1.png)
+![Items and constructs](./images/anes1.png)Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./images/anes1.png" alt="Items and constructs"/>Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
-
-<img src="./images/anes2.png" alt="Items and constructs"/>Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
+![Items and constructs](./images/anes2.png)Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -208,9 +203,9 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-<img src="./images/item1.png" alt="Item W7Q16"/>Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
+![Item W7Q16](./images/item1.png)Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./images/item2.png" alt="Item W7Q16"/>Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
+![Item W7Q16](./images/item2.png)Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -257,9 +252,9 @@ plot(g, hide = TRUE,
      z.lab="Fairness")
 ```
 
-<img src="./images/p1.png" alt="Gender profile"/>Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
+![Gender Profile](./images/p1.png)Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./images/p2.png" alt="Gender profile"/>Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
+![Gender Profile](./images/p2.png)Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -304,9 +299,9 @@ plot(g, hide = TRUE,
      ellipse.col = "orange")
 ```
 
-<img src="./images/ci1.png" alt="95% CI"/>Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
+![95% CI](./images/ci1.png)Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
 
-<img src="./images/ci2.png" alt="95% CI"/>Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
+![95% CI](./images/ci2.png)Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
