--- a/README.Rmd
+++ b/README.Rmd
@@ -183,11 +183,13 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-![Items and constructs](./images/anes1.png)
+![](./images/anes1.png)
 
 Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
 
-![Items and constructs](./images/anes2.png)Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
+![](./images/anes2.png)
+
+Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Fairness, and Conformity (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -205,9 +207,13 @@ plot(g, constructs = TRUE,
         construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-![Item W7Q16](./images/item1.png)Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
+![](./images/item1.png)
 
-![Item W7Q16](./images/item2.png)Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
+Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clockwise.
+
+![](./images/item2.png)
+
+Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -254,9 +260,13 @@ plot(g, hide = TRUE,
      z.lab="Fairness")
 ```
 
-![Gender Profile](./images/p1.png)Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
+![](./images/p1.png)
 
-![Gender Profile](./images/p2.png)Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
+Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clockwise.
+
+![](./images/p2.png)
+
+Figure 6: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -301,9 +311,13 @@ plot(g, hide = TRUE,
      ellipse.col = "orange")
 ```
 
-![95% CI](./images/ci1.png)Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
+![](./images/ci1.png)
 
-![95% CI](./images/ci2.png)Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
+Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
+
+![](./images/ci2.png)
+
+Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
