--- a/README.Rmd
+++ b/README.Rmd
@@ -153,7 +153,7 @@ Constructs can be included in the analysis by creating one or more nested lists 
 
 The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) showing how all items discriminate locally in the direction of the construct vector with the help of the $DDISC$ index.
 
-When calling `D3mirt()` it is possible to use the S4 object from `mirt()` directly in the call to `D3mirt()` or a data frame containing model parameters from the compensatory model. The `summary()` function, included in the package, is used to inspect the DMIRT estimates. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (observable in the graphical output below).
+When calling `D3mirt()` it is possible to use the S4 object from `mirt()` (called `mod1`above) directly in the call to `D3mirt()` or a data frame containing model parameters from the compensatory model. The `summary()` function, included in the package, is used to inspect the DMIRT estimates. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (observable in the graphical output below).
 
 ```{r}
 # Optional: Load the mod1 data as data frame directly from the package file
